Add tests, Move index to its own folder, Modify README and Package.json - Add tests to cover basic usage of the api. - Moved index script to its own folder. - Modified package.json to reference the new lib folder. - Changed project name on README and package.json.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pro-pipe",
+  "name": "pipline",
   "version": "0.0.1",
-  "description": "Pro-pipe is a promise pipeline that can run concurrent functions with a nice to work with api.",
-  "main": "index.js",
+  "description": "Pipline is a promise pipeline that can run concurrent functions with a nice to work with api.",
+  "main": "lib/pipline.js",
   "scripts": {
     "test": "mocha --recursive test"
   },
