Add tag to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pipeline",
     "concurrent",
     "execution",
-    "limit"
+    "limit",
+	"timeout"
   ],
   "author": "Yengas",
   "license": "ISC"
